--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <div id="app">
     <ul>
-      <li v-for="language in languages">{{ language }}</li>
+      <li v-for="language in languages" v-text="language"></li>
     </ul>
   </div>
   
