Use the @ symbol

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </ul>
 
     <input type="text" v-model="newLang">
-    <button v-on:click="addLang">Add</button>
+    <button @click="addLang">Add</button>
   
   </div>
   
