--- a/index.html
+++ b/index.html
@@ -7,29 +7,15 @@
 <body>
 
   <div id="app">
-    <ul>
-      <li v-for="language in languages" v-text="language"></li>
-    </ul>
-
-    <input type="text" v-model="newLang">
-    <button @click="addLang">Add</button>
-  
+    <button v-bind:title="title">Hover over me</button>  
   </div>
   
   <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
   <script>
-    new Vue({
+    var app = new Vue({
       el: '#app',
       data: {
-        newLang: '',
-        languages: ['HTML', 'CSS', 'JavaScript', 'PHP']
-      },
-      methods: {
-        addLang: function () {
-          this.languages.push(this.newLang);
-
-          this.newLang = '';
-        }
+        title: 'I am set through JavaScript'
       }
     });
   </script>
