Components within components

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 
   <div id="root">
     
-    <task>Go to the store</task>
-    <task>Go to the bank</task>
-    <task>Go to the vacation</task>
+    <task-list></task-list>
 
   </div>
   
