--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Learn Vue 2</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
+  <style>
+    body { padding: 50px; }
+  </style>
 </head>
 <body>
 
   <div id="root">
-    
-    <task-list></task-list>
 
+    <message title="Hello World" body="Lorem ipsum dolor
+     sit amet."></message>  
+    
   </div>
   
   <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
